--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,6 +18,49 @@ const { title } = Astro.props;
 		/>
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
+
+		<!-- HTML Meta Tags -->
+		<title>Conavi - La Abejita de los Colombianos</title>
+		<meta
+			name="description"
+			content="Conavi - La Abejita de los Colombianos"
+		/>
+
+		<!-- Facebook Meta Tags -->
+		<meta property="og:url" content="https://conavi.lpa.com.co/" />
+		<meta property="og:type" content="website" />
+		<meta
+			property="og:title"
+			content="Conavi - La Abejita de los Colombianos"
+		/>
+		<meta
+			property="og:description"
+			content="Conavi - La Abejita de los Colombianos"
+		/>
+		<meta
+			property="og:image"
+			content="https://conavi.lpa.com.co/share.png"
+		/>
+
+		<!-- Twitter Meta Tags -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta property="twitter:domain" content="conavi.lpa.com.co" />
+		<meta property="twitter:url" content="https://conavi.lpa.com.co/" />
+		<meta
+			name="twitter:title"
+			content="Conavi - La Abejita de los Colombianos"
+		/>
+		<meta
+			name="twitter:description"
+			content="Conavi - La Abejita de los Colombianos"
+		/>
+		<meta
+			name="twitter:image"
+			content="https://conavi.lpa.com.co/share.png"
+		/>
+
+		<!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
