Add msg to click photo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -87,7 +87,8 @@ import Card from "../components/Card.astro";
 				<h2 class="text-5xl font-bold font-helvetica -skew-x-12">
 					HALLOWEEN
 				</h2>
-				<p class="pb-4 italic">Un recuerdo que nunca olvidaremos</p>
+				<p class="italic">Un recuerdo que nunca olvidaremos</p>
+				<p class="pb-4 text-xs">(Toca la foto para verla 😊)</p>
 
 				<div class="flex -space-x-32 justify-center pt-4">
 					<Card url="01.png" />
@@ -114,7 +115,7 @@ import Card from "../components/Card.astro";
 		</section>
 
 		<section class="bg-black">
-			<div class="container mx-auto py-4 flex flex-col">
+			<div class="container mx-auto py-4 flex flex-col pb-8">
 				<p
 					class="text-white text-sm text-center flex justify-center gap-1 items-center"
 				>
