--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -84,7 +84,7 @@ import Card from "../components/Card.astro";
 
 		<section class="container mx-auto py-8 overflow-hidden">
 			<div class="flex flex-col items-center">
-				<h2 class="text-5xl font-bold font-helvetica -skew-x-12">
+				<h2 class="text-5xl font-black font-helvetica -skew-x-12">
 					HALLOWEEN
 				</h2>
 				<p class="italic">Un recuerdo que nunca olvidaremos</p>
@@ -100,7 +100,7 @@ import Card from "../components/Card.astro";
 
 		<section class="container mx-auto flex justify-center py-8 pb-20">
 			<div class="flex flex-col items-center">
-				<h2 class="text-5xl font-bold font-helvetica -skew-x-12">
+				<h2 class="text-5xl font-extrabold font-helvetica -skew-x-12">
 					HISTORIA
 				</h2>
 				<p class="pb-4 italic">Conavi, el banco de la gente</p>
