--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -123,6 +123,4 @@ import Card from "../components/Card.astro";
 	</main>
 </Layout>
 
-<style>
-	@import "node_modules/react-modal-video/css/modal-video.min.css";
-</style>
+<style></style>
