Update photo description in index page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -89,7 +89,7 @@ import Card from "../components/Card.astro";
 					HALLOWEEN
 				</h2>
 				<p class="italic">Un recuerdo que nunca olvidaremos</p>
-				<p class="pb-4 text-xs">(Toca la foto para verla 😊)</p>
+				<p class="pb-4 text-xs">(Parate en la foto para verla 😊)</p>
 
 				<div class="flex -space-x-32 justify-center pt-4">
 					<Card url="01.png" />
